# quaketrace

./: .editorconfig  .gitignore  AppConfig.cpp  AppConfig.hpp  ArrayView.hpp  Assert.hpp  AssetHelper.cpp  AssetHelper.hpp  BackgroundTracer.cpp  BackgroundTracer.hpp  BinaryWriter.cpp  BinaryWriter.hpp  BreakPoint.hpp  BspEntity.cpp  BspEntity.hpp  BspLoader.cpp  BspLoader.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collision3D.cpp  Collision3D.hpp  Color.hpp  CommandLine.cpp  CommandLine.hpp  Common.cpp  Common.hpp  Console.cpp  Console.hpp  File.hpp  Font.cpp  Font.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GUI.cpp  GUI.hpp  Geometry.hpp  GraphicTool.cpp  GraphicTool.hpp  Image.cpp  (+34 more)
assets/: LICENSE.txt  bundle.py
testmap/: LICENSE.txt  build.py  light  qbsp  testmap.map  testmap.wad  testmap2.map  testmap_water.map  vis
